--- a/oop11/oop11.vcxproj.filters
+++ b/oop11/oop11.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Array.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Arr2.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Arr2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
